added application.h and prepared for decomposition^TM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(
 #add_subdirectory(source)
 add_subdirectory(webgpu)
 
-add_executable(fft_water_sim main.cpp)
+add_executable(fft_water_sim main.cpp Application.h)
 
 target_link_libraries(fft_water_sim PRIVATE webgpu)
 # Add the 'glfw' target as a dependency of our App
