--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(fft_water_sim
-    Application.h
-    webgpu-utils.h
-    ResourceManager.h
+    *
+    # Application.h
+    # webgpu-utils.h
+    # ResourceManager.h
 )
